# xdg-perm

./: Cargo.toml  README.md  justfile
src/: main.rs
